Fixes paragraph line-heights and image spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -887,10 +887,6 @@ article.article__body {
   word-break: break-word
 }
 
-section.article__body p img {
-  scale: 0.5;
-}
-
 .article__body a,
 article.archive-list a {
   color: var(--ecto);
